--- a/hackathon-python.adoc
+++ b/hackathon-python.adoc
@@ -1,8 +1,11 @@
 = Snippets for Python Usage in Robot Hackathon
 == Install ODO in Python Codeready Workspace
+
+Execute the following commands in your CodeReady Python Workspace:
+
 ----
-curl -L https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-amd64 -o /opt/app-root/bin/odo
-chmod +x /opt/app-root/bin/odo
+# curl -L https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-amd64 -o /opt/app-root/bin/odo
+# chmod +x /opt/app-root/bin/odo
 ----
 
 == Deploy to OpenShift using ODO
@@ -19,7 +22,7 @@ TIP: Make sure you are in the project folder
 
 Tell odo that you are using a Python project:
 ----
-odo create Python
+odo create python
 ----
 
 Expose the url of your application :
@@ -31,7 +34,8 @@ Now push your code to the OpenShift
 odo push
 ----
 
-*Wait until the odo push is finished
-*Go to the OpenShift web console and open your project. 
-*The route to externally access the application will be visible in the upper right 
+
+* Wait until the odo push is finished
+* Go to the OpenShift web console and open your project. 
+* The route to externally access the application will be visible in the upper right 
 corner. 
